tests/ui/discord-frontend/entity_macro/field_does_not_exist_or_older_version.stderr
error: field `nonexistent_field` cannot be found in type `twilight_model::channel::Channel`
  --> tests/ui/discord-frontend/entity_macro/field_does_not_exist_or_older_version.rs:36:16
   |
LL |     exclude = ["nonexistent_field"],
   |                ^^^^^^^^^^^^^^^^^^^
   |
   = note: the type metadata generated was for twilight-model version 0.15.4
   = help: consider regenerating the metadata for a newer version if the field is recently added

error: aborting due to 1 previous error

